add background image and form background

--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        
-        <script src="script.js" async defer></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="sidebar">
+        <div class="background">
+          <img
+            src="./halie-west-25xggax4bSA-unsplash.jpg"
+            class="bg-img"
+            alt="picture of some ferns"
+          />
+        </div>
+        <div class="logo">
+          <div class="odin"></div>
+        </div>
+      </div>
+      <div class="login">
+        <div class="hero">
+          This is not a real online service! You know you need something like
+          this in your life to help you realize your deepest dreams. <br />Sign
+          up <i>now</i> to get started. <br /><br />
+          You know you want to.
+        </div>
+        <div class="form">This is the section for the form.</div>
+        <div class="signup">This is the signup area.</div>
+      </div>
+    </div>
+    <script src="script.js" async defer></script>
+  </body>
 </html>
