--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
           />
         </div>
         <div class="logo">
-          <div class="odin"></div>
+          <div class="odin">
+            <img
+              src="./odin-lined.png"
+              class="odin-img"
+              alt="transparent odin image"
+            />
+            <div class="odin-text">ODIN</div>
+          </div>
         </div>
       </div>
       <div class="login">
