--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             class="bg-img"
             alt="picture of some ferns"
           />
+          <div class="credits">
+            Photo by
+            <a
+              href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA"
+              >Halie West</a
+            >
+            on
+            <a href="https://unsplash.com/">Unsplash</a>
+          </div>
         </div>
         <div class="logo">
           <div class="odin">
@@ -36,7 +45,30 @@
           up <i>now</i> to get started. <br /><br />
           You know you want to.
         </div>
-        <div class="form">This is the section for the form.</div>
+        <form>
+          <legend>Let's do this!</legend>
+          <div class="names">
+            <div class="first-name">
+              <label for="first_name">First Name</label>
+              <input type="text" id="first_name" name="First Name" />
+            </div>
+            <div class="last-name">
+              <label for="last_name">Last Name</label>
+              <input type="text" id="last_name" name="Last Name" />
+            </div>
+          </div>
+          <div class="details">
+            <div class="phone">
+              <label for="phone_number">Phone Number</label>
+              <input type="tel" id="phone_number" name="phone_number" />
+            </div>
+            <div class="email">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" />
+            </div>
+          </div>
+        </form>
+
         <div class="signup">This is the signup area.</div>
       </div>
     </div>
