--- a/index.html
+++ b/index.html
@@ -45,31 +45,48 @@
           up <i>now</i> to get started. <br /><br />
           You know you want to.
         </div>
-        <form>
-          <legend>Let's do this!</legend>
-          <div class="names">
-            <div class="first-name">
-              <label for="first_name">First Name</label>
-              <input type="text" id="first_name" name="First Name" />
+        <div class="login-form">
+          <form>
+            <legend>Let's do this!</legend>
+            <div class="names">
+              <div class="first-name">
+                <label for="first_name">FIRST NAME</label>
+                <input type="text" id="first_name" name="First Name" />
+              </div>
+              <div class="last-name">
+                <label for="last_name">LAST NAME</label>
+                <input type="text" id="last_name" name="Last Name" />
+              </div>
             </div>
-            <div class="last-name">
-              <label for="last_name">Last Name</label>
-              <input type="text" id="last_name" name="Last Name" />
+            <div class="details">
+              <div class="phone">
+                <label for="phone_number">PHONE NUMBER</label>
+                <input type="tel" id="phone_number" name="phone_number" />
+              </div>
+              <div class="email">
+                <label for="email">EMAIL</label>
+                <input type="email" id="email" name="email" />
+              </div>
             </div>
+            <div class="security">
+              <div class="password">
+                <label for="password">PASSWORD</label>
+                <input type="password" id="password" name="password" />
+              </div>
+              <div class="confirm">
+                <label for="confirm">CONFIRM PASSWORD</label
+                ><input type="password" id="confirm" name="confirm" />
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="signup">
+          <button class="create-account">Create Account</button>
+          <div class="account-text">
+            Already have an account?
+            <a class="login-link" href="https://www.google.com">Log in</a>
           </div>
-          <div class="details">
-            <div class="phone">
-              <label for="phone_number">Phone Number</label>
-              <input type="tel" id="phone_number" name="phone_number" />
-            </div>
-            <div class="email">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" />
-            </div>
-          </div>
-        </form>
-
-        <div class="signup">This is the signup area.</div>
+        </div>
       </div>
     </div>
     <script src="script.js" async defer></script>
