--- a/index.html
+++ b/index.html
@@ -46,46 +46,67 @@
           You know you want to.
         </div>
         <div class="login-form">
-          <form>
-            <legend>Let's do this!</legend>
-            <div class="names">
-              <div class="first-name">
-                <label for="first_name">FIRST NAME</label>
-                <input type="text" id="first_name" name="First Name" />
+          <form id="registrationForm">
+            <div class="form-header">
+              <legend>Let's do this!</legend>
+              <div class="names">
+                <div class="first-name">
+                  <label for="first_name">FIRST NAME</label>
+                  <input
+                    type="text"
+                    pattern="[ a-zA-ZāēīōūĀĒĪŌŪ  ]*"
+                    id="first_name"
+                    name="First Name"
+                  />
+                </div>
+                <div class="last-name">
+                  <label for="last_name">LAST NAME</label>
+                  <input
+                    type="text"
+                    pattern="[ a-zA-ZāēīōūĀĒĪŌŪ  ]*"
+                    id="last_name"
+                    name="Last Name"
+                  />
+                </div>
               </div>
-              <div class="last-name">
-                <label for="last_name">LAST NAME</label>
-                <input type="text" id="last_name" name="Last Name" />
+              <div class="details">
+                <div class="phone">
+                  <label for="phone_number">PHONE NUMBER</label>
+                  <input
+                    type="tel"
+                    pattern="[0-9]*"
+                    id="phone_number"
+                    name="phone_number"
+                  />
+                </div>
+                <div class="email">
+                  <label for="email">EMAIL</label>
+                  <input type="email" id="email" name="email" />
+                </div>
+              </div>
+              <div class="security">
+                <div class="password">
+                  <label for="password">PASSWORD</label>
+                  <input type="password" id="password" name="password" />
+                  <br />
+                  <p id="error" style="height: 8px"></p>
+                </div>
+                <div class="confirm">
+                  <label for="confirm">CONFIRM PASSWORD</label
+                  ><input type="password" id="confirm" name="confirm" />
+                </div>
               </div>
             </div>
-            <div class="details">
-              <div class="phone">
-                <label for="phone_number">PHONE NUMBER</label>
-                <input type="tel" id="phone_number" name="phone_number" />
-              </div>
-              <div class="email">
-                <label for="email">EMAIL</label>
-                <input type="email" id="email" name="email" />
-              </div>
-            </div>
-            <div class="security">
-              <div class="password">
-                <label for="password">PASSWORD</label>
-                <input type="password" id="password" name="password" />
-              </div>
-              <div class="confirm">
-                <label for="confirm">CONFIRM PASSWORD</label
-                ><input type="password" id="confirm" name="confirm" />
+            <div class="signup">
+              <button type="submit" class="create-account">
+                Create Account
+              </button>
+              <div class="account-text">
+                Already have an account?
+                <a class="login-link" href="https://www.google.com">Log in</a>
               </div>
             </div>
           </form>
-        </div>
-        <div class="signup">
-          <button class="create-account">Create Account</button>
-          <div class="account-text">
-            Already have an account?
-            <a class="login-link" href="https://www.google.com">Log in</a>
-          </div>
         </div>
       </div>
     </div>
