--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
           <div class="credits">
             Photo by
             <a
+              class="unsplash"
               href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA"
               >Halie West</a
             >
             on
-            <a href="https://unsplash.com/">Unsplash</a>
+            <a class="unsplash" href="https://unsplash.com/">Unsplash</a>
           </div>
         </div>
         <div class="logo">
